# turma-do-gatil-back/src/main/java/br/com/udesc/turma_do_gatil_back/controllers/SterilizationController.java
@@ -1,9 +1,11 @@
 package br.com.udesc.turma_do_gatil_back.controllers;
 
+import br.com.udesc.turma_do_gatil_back.dto.SterilizationDaysDto;
 import br.com.udesc.turma_do_gatil_back.dto.SterilizationDto;
 import br.com.udesc.turma_do_gatil_back.entities.Sterilization;
 import br.com.udesc.turma_do_gatil_back.enums.SterilizationStatus;
 import br.com.udesc.turma_do_gatil_back.mappers.EntityMapper;
+import br.com.udesc.turma_do_gatil_back.services.PropertiesService;
 import br.com.udesc.turma_do_gatil_back.services.SterilizationService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
@@ -27,6 +29,7 @@ import java.util.UUID;
 public class SterilizationController {
 
     private final SterilizationService sterilizationService;
+    private final PropertiesService propertiesService;
 
     @GetMapping
     public ResponseEntity<Page<SterilizationDto>> getAllSterilizations(
@@ -122,5 +125,21 @@ public class SterilizationController {
         Page<Sterilization> sterilizations = sterilizationService.findByStatus(status, pageable);
         Page<SterilizationDto> sterilizationsDto = EntityMapper.toPage(sterilizations, EntityMapper::toSterilizationDto);
         return ResponseEntity.ok(sterilizationsDto);
+    }
+
+    @GetMapping("/days")
+    public ResponseEntity<SterilizationDaysDto> getSterilizationDays() {
+        String min = propertiesService.getProperty("sterilizationMinDays");
+        String max = propertiesService.getProperty("sterilizationMaxDays");
+        int minDays = Integer.parseInt(min);
+        int maxDays = Integer.parseInt(max);
+        return ResponseEntity.ok(new SterilizationDaysDto(minDays, maxDays));
+    }
+
+    @PostMapping("/days")
+    public ResponseEntity<Void> setSterilizationDays(@RequestBody SterilizationDaysDto dto) {
+        propertiesService.setProperty("sterilizationMinDays", String.valueOf(dto.getMinDays()));
+        propertiesService.setProperty("sterilizationMaxDays", String.valueOf(dto.getMaxDays()));
+        return ResponseEntity.ok().build();
     }
 }
